Fixed ProductController tests